--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@stitches/react": "^1.2.8",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
